@startuml
'https://plantuml.com/class-diagram
hide circle
class PlansRepository <<interface>>

title Class Diagram / As marketing director, I want to deactivate a plan

class Plans{
    -name
    - description
    - numberOfMinutes
    -maximumNumberOfUsers
    -musicCollection
     -musicSuggestion
     -annualFee
     -monthlyFee
     -active
     -promoted
     +deactivate(long desiredVersion): void
}
class PlansViewMapper{
    +toPlansView(Plans plans):PlansView
}
class PlansMapperInverse{
    +toPlansView(PlanRequest plans)
}
class PlansController{
    +deactivate(final WebRequest request,final String name): ResponseEntity<PlansView>
   }
class PlansService{
 +deactivate(String name, long desiredVersion): Plans

}
interface PlansRepository
{
+findByName_Name(String name): Optional<Plans>
+ getPlansFromOtherAPI(String name)
+ doPlansPatchDeactivate(String name, long desiredVersion)
+save(S entity) : <S extends Plans>
}


PlansController ..> PlansService: uses >
PlansService ..> PlansRepository: uses >
PlansService ..> PlansRepositoryCustomImpl: uses >
PlansRepository ..> Plans: < record
PlansRepository ..left>PlansController: HTPP API call >
PlansService ..> Plans: uses >
PlansController ..> PlansMapperInverse: uses >
PlansController ..>PlansViewMapper: uses >
@enduml